Add Product Filtering with Pagination & API Enhancements   (#23)
* feat(variant): move variant model out of product file and into a separate file

* feat(interface): add and modify filter method  to product interface

* feat(response): add filter response struct

* feat(response): add internal and bad request error handler helpers to response

* feat(apperrors): add error messages

* feat(product): update product filter in repository to use pagination

* feat(product): update product filter service to take pagination options

* feat(product): add filter handler and change update http method

- change product and variant update methods to patch. This is because we are only updating some fields with the apis, not the whole object

* feat(route): register filter api and change update http method to  `PATCH`

* feat(doc) add swagger docs
